<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/_sign_up_arrow_back"
                    android:background="@drawable/arrow_back"
                    android:layout_marginStart="16.000122070312dp"
                    android:layout_marginTop="40.462707519531dp"
                    android:layout_width="56.881774902344dp"
                    android:layout_height="45.303344726562dp" />

                <TextView
                    android:id="@+id/_sign_up_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/helvetica_neuemedium"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/light_white"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/sign_up_bg"
                    android:layout_width="327dp"
                    android:layout_height="550dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="105.48260498047dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/white_edits" />

                <TextView
                    android:id="@+id/_lets_join_us_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="135.48260498047dp"
                    android:fontFamily="@font/helvetica_neuemedium"
                    android:gravity="center"
                    android:text="@string/lets_join_us"
                    android:textColor="@color/light_black"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/_we_would_love_you_to_join_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/_lets_join_us_txt"
                    android:alpha="0.5"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/we_would_love_you_to_join_us"
                    android:textColor="@color/light_black"
                    android:textSize="11sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/_text_input_name"
                    android:layout_height="60dp"
                    android:layout_width="270dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="15dp"
                    android:maxWidth="270dp"
                    app:startIconDrawable="@drawable/_sign_up_person_24"
                    android:layout_marginEnd="40dp"
                    app:startIconTint="@color/light_red"
                    android:layout_below="@id/_we_would_love_you_to_join_us">

                    <EditText
                        android:id="@+id/_user_name_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/phone_number_background"
                        android:hint="@string/_username" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/_text_input_email"
                    android:layout_height="60dp"
                    android:layout_width="270dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="40dp"
                    android:maxWidth="270dp"
                    android:layout_marginTop="1dp"
                    app:startIconDrawable="@drawable/_sign_up_mail_24"
                    app:startIconTint="@color/light_red"
                    android:layout_marginEnd="40dp"
                    android:layout_below="@id/_text_input_name">

                    <EditText
                        android:id="@+id/_email_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@id/_user_name_sign_up"
                        android:background="@drawable/phone_number_background"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/_text_input_phone"
                    android:layout_width="270dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/_text_input_email"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    app:startIconTint="@color/light_red"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="40dp"
                    app:startIconDrawable="@drawable/_sign_up_phone_24">

                    <EditText
                        android:id="@+id/_sign_up_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/phone_number_background"
                        android:hint="@string/phone_number"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/_text_input_password"
                    android:layout_height="60dp"
                    android:layout_width="270dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    app:passwordToggleEnabled="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="1dp"
                    app:startIconTint="@color/light_red"
                    android:layout_marginEnd="40dp"
                    android:layout_below="@id/_text_input_phone"
                    app:startIconDrawable="@drawable/_sing_up_lock_24"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/_sign_up_password"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/phone_number_background"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/_signup_linear1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/_text_input_password"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/_signup_linear2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/_checkbox1"
                            android:buttonTint="@color/light_grey"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp" />

                        <TextView
                            android:id="@+id/_i_agree_terms_and_conditions"
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/i_agree_terms_and_conditions"
                            android:textColor="@color/light_grey"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/_signup_linear3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/_checkbox2"
                            android:layout_width="wrap_content"
                            android:buttonTint="@color/light_grey"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp" />

                        <TextView
                            android:id="@+id/_i_agree_to_the_privacy_policy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/i_agree_to_the_privacy_policy"
                            android:textColor="@color/light_grey"
                            android:textSize="12sp" />
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/_sign_up_next_button"
                    android:layout_width="match_parent"
                    android:layout_height="40.967163085938dp"
                    android:layout_below="@id/_signup_linear1"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="90dp"
                    android:background="@drawable/tutorial_btn"
                    android:gravity="center"
                    android:text="Register"
                    android:textColor="@color/light_white"
                    android:textStyle="bold" />

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>