<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/light_black"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/__p__sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="55dp"
                    android:fontFamily="@font/helvetica_neuemedium"
                    android:gravity="center"
                    android:text="Sign In"
                    android:textColor="@color/light_white"
                    android:textSize="35sp"
                    android:textStyle="bold" />


                <ImageView
                    android:id="@+id/bg_sign_in_with_user_mail"
                    android:layout_width="327dp"
                    android:layout_height="380dp"
                    android:layout_below="@id/__p__sign_in"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/white_edits" />

                <TextView
                    android:id="@+id/_welcome_sign_in_with_user_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/__p__sign_in"
                    android:layout_marginTop="55dp"
                    android:fontFamily="@font/helvetica_neuemedium"
                    android:gravity="center"
                    android:text="Welcome"
                    android:textColor="@color/light_black"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/_Sign_in__text_input_email"
                    android:layout_width="270dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/_welcome_sign_in_with_user_mail"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="50dp"
                    android:maxWidth="270dp"
                    app:startIconDrawable="@drawable/_sign_up_mail_24"
                    app:startIconTint="@color/light_red">

                    <EditText
                        android:id="@+id/_sign_in_with_email_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/phone_number_background"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/_Sign_in_text_input_password"
                    android:layout_width="270dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/_Sign_in__text_input_email"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="05dp"
                    android:layout_marginEnd="50dp"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/_lock_24"
                    app:startIconTint="@color/light_red">

                    <EditText
                        android:id="@+id/_sign_in_with_user_mail_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/phone_number_background"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/_sign_in_forgot_your_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/_Sign_in_text_input_password"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/forget_password"
                    android:textColor="@color/light_grey"
                    android:textSize="13sp" />


                <Button
                    android:id="@+id/_sign_in_with_user_mail_next_button"
                    android:layout_width="125.99987792969dp"
                    android:layout_height="44.00006103516dp"
                    android:layout_below="@id/_sign_in_forgot_your_password"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="100dp"
                    android:background="@drawable/tutorial_btn"
                    android:text="Login"
                    android:textColor="@color/light_white"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="221.58767700195dp"
                    android:layout_height="66dp"
                    android:layout_below="@id/bg_sign_in_with_user_mail"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="80dp"
                    android:background="@drawable/white_edits"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/red_color"
                    android:textSize="19sp" />


            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout >