<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <RelativeLayout
        android:id="@+id/_home_second_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_file">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="Hi, Welcome!!"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/helvetica_neuemedium"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <ScrollView
        android:id="@+id/_home_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/_home_second_relative"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/_rent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montsrerrat_semi_bold"
        android:text="@string/sale_rent_house"
        android:textColor="@color/black"
        android:layout_below="@id/_home_second_relative"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/_home_third_relative"
        android:layout_width="wrap_content"
        android:layout_below="@id/_rent_text"
        android:layout_marginStart="12sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rent_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </RelativeLayout>

        <TextView
            android:id="@+id/Sale_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montsrerrat_semi_bold"
            android:text="@string/sale_house"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/_home_seven_relative"
            android:layout_width="wrap_content"
            android:layout_marginStart="12sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Sale_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </RelativeLayout>

    <TextView
        android:id="@+id/_Events_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montsrerrat_semi_bold"
        android:text="@string/events"
        android:textColor="@color/black"
        android:layout_below="@id/_home_third_relative"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/_home_four_relative"
        android:layout_width="wrap_content"
        android:layout_below="@id/_Events_text"
        android:layout_marginStart="12dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/event_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </RelativeLayout>

    <TextView
        android:id="@+id/Bills_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montsrerrat_semi_bold"
        android:text="Bills"
        android:textColor="@color/black"
        android:layout_below="@id/_home_four_relative"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/_home_five_relative"
        android:layout_width="wrap_content"
        android:layout_below="@id/Bills_txt"
        android:layout_marginStart="12dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Bill_Recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </RelativeLayout>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>